# stock_predictor

./: .gitignore  README.md  config.py  pyproject.toml
api/: main.py
data/: collect.py
features/: engineer.py
models/: predict.py  train.py
monitor/: drift.py
scripts/: run_pipeline.py
utils/: config.py
