[tool.poetry]
name = "stock-predictor"
version = "0.1.0"
description = "Stock prediction pipeline"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
yfinance = "*"
pandas = "*"
scikit-learn = "*"
xgboost = "*"
fastapi = "*"
uvicorn = "*"
python-dotenv = "*"
joblib = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


